removing alignment issues

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ a.nav {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
     justify-self: center;
     width: 100%;
     border-right: 2px solid black;
